# SMERVisual

./: LICENSE  MANIFEST.in  README.md  example.ipynb  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  smer_image_classification.py
.github/workflows/: docs.yml  tests.yml
docs/: api.md  getting-started.md  index.md
smer_visual/: __init__.py  bounding_boxes.py  smer.py  smer_visual.py  smer_visual_new.py  smer_visual_old.py  utils.py
smer_visual_classification/: __init__.py  smer_visual.py
src/: smer_visual.py  utils.py
tests/: conftest.py  test_smer.py  test_utils.py
