[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smer-visual"
version = "1.0.2"
authors = [
    { name = "Vojtěch Balek", email = "vojta.balek@gmail.com" },
    { name = "Julija Jeršova", email = "poty01@vse.cz"},
    { name = "Tomáš Kliegr", email = "tomas.kliegr@vse.cz" },
    { name = "Michael Ahmet Ay", email = "aymi00@vse.cz"}
]
description = "This package provides means of explainable classification of images with LLM-generated text descriptions, that are then analyzed using the Self Model Entities Related (SMER) explanation technique."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
dependencies = [
    "opencv-python==4.11.0.86",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "Pillow==11.1.0",
    "seaborn==0.13.2",
    "scikit-learn==1.6.1",
    "spacy==3.8.2",
    "torch==2.4.1",
    "tqdm==4.67.1",
    "transformers==4.48.0",
    "openai==1.52.2",
    "lime==0.2.0.1"
]


[project.urls]
"Homepage" = "https://github.com/vojtech-balek/SMERVisual"
"Bug Tracker" = "https://github.com/vojtech-balek/SMERVisual/issues"
